// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlineStyle renders 0 1`] = `
Array [
  .c0 {
  text-underline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders function 1`] = `
Array [
  .c0 {
  text-underline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders negative number 1`] = `
Array [
  .c0 {
  text-underline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-underline-style: July;
  }
}

@media April {
  .c0 {
    text-underline-style: August;
  }
}

@media January {
  .c0 {
    text-underline-style: September;
  }
}

@media April {
  .c0 {
    text-underline-style: November;
  }
}

@media June {
  .c0 {
    text-underline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-style: July;
  }
}

@media April {
  .c0 {
    text-underline-style: August;
  }
}

@media January {
  .c0 {
    text-underline-style: September;
  }
}

@media April {
  .c0 {
    text-underline-style: November;
  }
}

@media June {
  .c0 {
    text-underline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-style: January;
  }
}

@media April {
  .c0 {
    text-underline-style: December;
  }
}

@media January {
  .c0 {
    text-underline-style: April;
  }
}

@media April {
  .c0 {
    text-underline-style: May;
  }
}

@media June {
  .c0 {
    text-underline-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-style: January;
  }
}

@media April {
  .c0 {
    text-underline-style: December;
  }
}

@media January {
  .c0 {
    text-underline-style: April;
  }
}

@media April {
  .c0 {
    text-underline-style: May;
  }
}

@media June {
  .c0 {
    text-underline-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders string 1`] = `
Array [
  .c0 {
  text-underline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineStyle renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
